# superframe

./: .gitignore  CHANGELOG.md  Cargo.toml  Embed.toml  README.md  build.rs  memory.x  shell.nix
.cargo/: config
led_effects/: Cargo.toml
led_effects/src/: chaser.rs  lib.rs  sequence.rs  time.rs
led_effects/src/chaser/: rainbow_chaser.rs  random_color_path.rs  random_unicolor.rs  unicolor_transition.rs
led_effects/src/sequence/: color_path.rs  gradient.rs  unicolor.rs
src/: chaser.rs  main.rs  sequence.rs
src/chaser/: rainbow_chaser.rs
src/sequence/: gradient.rs  rainbow.rs  unicolor.rs
